@@ -167,10 +167,18 @@ Groovy has the `groovy.transform.NotYetImplemented` annotation which is similar 
 * if at least one iteration of a data-driven test fails it will be reported as skipped
 * if every iteration of a data-driven test passes it will be reported as error
 
-[source,groovy]
+[source,groovy,indent=0]
 ----
-@PendingFeature
-def "not implemented yet"() { ... }
+include::{sourcedir}/extension/PendingFeatureDocSpec.groovy[tag=example-a]
+----
+
+It is also supported to have multiple `@PendingFeature` annotations or a mixture of `@PendingFeature` and
+`@PendingFeatureIf`, for example to ignore certain exceptions only under certain conditions or show different
+reasons for different exceptions.
+
+[source,groovy,indent=0]
+----
+include::{sourcedir}/extension/PendingFeatureDocSpec.groovy[tag=example-b]
 ----
 
 === PendingFeatureIf
